--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ body {
 	color: #fff;
 }
 
+.underline {
+	text-decoration: underline;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
